--- a/css/home.css
+++ b/css/home.css
@@ -33,6 +33,7 @@
 	}*/
 
 
+
 }
 
 
@@ -55,6 +56,7 @@
 	display: block;
 	/*padding-top: 30px;*/
 	max-width: 400px;
+	min-width: 370px;
 	height: 430px;
 }
 
