--- a/css/home.css
+++ b/css/home.css
@@ -34,9 +34,14 @@
 }
 
 
-.tree_item .tree_pitcher{
+.tree_item{
 	width: 150px;
 	height: 150px;
+}
+
+.tree_item .tree_pitcher{
+	width: 100%;
+	height: 100%;
 }
 
 .tree{
