--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: GenSekiGothicTW;
+	src: url('../genseki-font-master/ttc/GenSekiGothicTW-L.ttf') ;
+  }
+
 .title {
   text-align: center;
   text-transform: uppercase;
@@ -164,21 +169,78 @@ body {
   border: 5px solid #2C3E50;
 }
 
+
 .form-control {
-  margin-top: 5px;
+  font-family: GenSekiGothicTW;
+  margin-top:  5px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   -ms-box-shadow: none;
   -o-box-shadow: none;
   box-shadow: none;
   border: none;
-  border: 2px solid rgba(0, 0, 0, 0.1);
-  font-size: 18px;
+  border: 1px solid #42210B;
+  background-color: #FFECDC;
+  font-size: 20px;
   font-weight: 300;
+  height: 35px;
+  width: 625px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   border-radius: 4px;
+}
+
+#message{
+  padding-top: 5px;
+  height: 100px;
+  width: 625;
+  resize: none;
+}
+
+#number{
+  text-align: center;
+}
+
+.form-group{
+  margin: auto;
+  width: auto;
+  display: block;
+}
+
+
+@media screen and (max-width: 414px){
+  .form-control {
+    margin-top:  5px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -ms-box-shadow: none;
+    -o-box-shadow: none;
+    box-shadow: none;
+    border: none;
+    border: 1px solid #42210B;
+    font-size: 20px;
+    font-weight: 300;
+    height: 35px;
+    width: 247px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
+  }
+  
+  #message{
+    height: 100px;
+    width: 247px;
+    resize: none;
+  }
+  
+  .form-group{
+    margin: auto;
+    width: 225px;
+    display: block;
+  }
+  
 }
 
 .btn-primary {
