加入我想種樹

--- a/css/home.css
+++ b/css/home.css
@@ -51,6 +51,10 @@
 	margin: auto 10px;
 }
 
+.header-item-wrap a{
+	text-decoration:none;
+}
+
 .header-item{
 	font-family: GenSekiGothicTW;
 	font-size: 20px;
