--- a/css/home.css
+++ b/css/home.css
@@ -113,128 +113,153 @@ body{
 	position: absolute;
 	top:5%;
 	left: 31%;
+	z-index: 1;
 }
 #t_2 {
 	position: absolute;
 	top:13%;
 	left: 31%;
+	z-index: 2;
 }
 #t_3 {
 	position: absolute;
 	top:23%;
 	left: 31%;
+	z-index: 3;
 }
 
 #t_4 {
 	position: absolute;
 	top:33%;
 	left: 31%;
+	z-index: 4;
 }
 
 #t_5 {
 	position: absolute;
 	top:44%;
 	left: 31%;
+	z-index: 5;
 }
 #t_6 {
 	position: absolute;
 	top:11%;
 	left: 21%;
+	z-index: 2;
 }
 #t_7 {
 	position: absolute;
 	top:21%;
 	left: 21%;
+	z-index: 3;
 }
 #t_8 {
 	position: absolute;
 	top:31%;
 	left: 21%;
+	z-index: 4;
 }
 #t_9 {
 	position: absolute;
 	top:41%;
 	left: 21%;
+	z-index: 5;
 }
 #t_10 {
 	position: absolute;
 	top:17%;
 	left: 12%;
+	z-index: 3;
 }
 #t_11 {
 	position: absolute;
 	top:27%;
 	left: 12%;
+	z-index: 4;
 }
 #t_12 {
 	position: absolute;
 	top:37%;
 	left: 12%;
+	z-index: 5;
 }
 #t_13 {
 	position: absolute;
 	top:20%;
 	left: 3%;
+	z-index: 4;
 }
 #t_14 {
 	position: absolute;
 	top:31%;
 	left: 3%;
+	z-index: 5;
 }
 #t_15 {
 	position: absolute;
 	top:26%;
 	left: -7%;
+	z-index: 5;
 }
 #t_16 {
 	position: absolute;
 	top:9%;
 	left: 40%;
+	z-index: 2;
 }
 #t_17 {
 	position: absolute;
 	top:20%;
 	left: 40%;
+	z-index: 3;
 }
 #t_18 {
 	position: absolute;
 	top:30%;
 	left: 40%;
+	z-index: 4;
 }
 #t_19 {
 	position: absolute;
 	top:40%;
 	left: 40%;
+	z-index: 5;
 }
 #t_20 {
 	position: absolute;
 	top:15%;
 	left: 49%;
+	z-index: 3;
 }
 #t_21 {
 	position: absolute;
 	top:25%;
 	left: 49%;
+	z-index: 4;
 }
 #t_22 {
 	position: absolute;
 	top:35%;
 	left: 49%;
+	z-index: 5;
 }
 #t_23 {
 	position: absolute;
 	top:20%;
 	left: 58%;
+	z-index: 4;
 }
 #t_24 {
 	position: absolute;
 	top:30%;
 	left: 58%;
+	z-index: 5;
 }
 #t_25 {
 	position: absolute;
 	top:26%;
 	left: 69%;
+	z-index: 5;
 }
 
 @media screen and (max-width: 414px){
