--- a/css/home.css
+++ b/css/home.css
@@ -15,6 +15,11 @@ body{
 }
 
 .D {
+/* 	background-image: url("../img/backimg.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+	background-size: cover; */
 	max-width: 1200px;
 	width: 100%;
 	background-color: #FFECDC;
