--- a/css/home.css
+++ b/css/home.css
@@ -22,7 +22,7 @@ body{
 	background-size: cover; */
 	max-width: 1200px;
 	width: 100%;
-	background-color: #FFECDC;
+	/* background-color: #FFECDC; */
 	margin: auto;
 }
 
